some more changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<div class= "body-top">
 			<h1>Latest News</h1>
 			<p class="para1">The latest links in the front-end community.<a class="add-link" href="#">Add a Link now!</a></p> 
+			<form class="form">
+				<label class="form-label" for="form-link-input">Add a story:</label>
+				<input class="form-input" type="text" id="form-link-input"></input>
+			</form>
 		</div>
 	
 		<ol class="news-list">
@@ -18,7 +22,7 @@
 					<ul class="news-like">
 						<li>posted by:<a href= "#">Dan Donney</a></li>
 						<li><a href= "#">2 Comments</a></li>
-						<li><a href= "#">Liked!</a></li>
+						<li><a class="like" href= "#">Liked!</a></li>
 					</ul>
 			</li>
 			<li class="news-list-item">
@@ -26,7 +30,7 @@
 				<ul class="news-like">
 						<li>posted by:<a href= "#">Dothraki</a></li>
 						<li><a href= "#">2 Comments</a></li>
-						<li><a href= "#">Liked!</a></li>
+						<li><a class="like" href= "#">Like</a></li>
 					</ul>
 			</li>
 			<li class="news-list-item">
@@ -34,7 +38,7 @@
 				<ul class="news-like">
 						<li>posted by:<a href= "#">Barak Obama</a></li>
 						<li><a href= "#">2 Comments</a></li>
-						<li><a href= "#">Liked!</a></li>
+						<li><a class="like" href= "#">Like</a></li>
 					</ul>
 			</li>
 			<li class="news-list-item">
@@ -42,11 +46,12 @@
 				<ul class="news-like">
 						<li>posted by:<a href= "#">Matt Romney</a></li>
 						<li><a href= "#">2 Comments</a></li>
-						<li><a href= "#">Liked!</a></li>
+						<li><a class="like" href= "#">Like</a></li>
 					</ul>
 			</li>
 		</ol>
 
 	</main>
+	<script src= "app.js"></script>
 </body>
 </html>
