--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		</ol>
 
 	</main>
+	<script  src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script src= "app.js"></script>
 </body>
 </html>
